Implementando cadastro de servicos(Em Progresso)

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,4 +11,6 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
-</ion-content>
+  <button ion-button full (click)="goCadastrarServico()">Cadastro de Servico</button>
+  <button ion-button full (click)="goCadastro()">Cadastro de Usuario</button>
+  </ion-content>
