implementando login (Funcinando)

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,4 +13,5 @@
   </p>
   <button ion-button full (click)="goCadastrarServico()">Cadastro de Servico</button>
   <button ion-button full (click)="goCadastro()">Cadastro de Usuario</button>
+  <button ion-button full (click)="goLogin()">Login</button>
   </ion-content>
