Alterações insignificantes kkk

--- a/src/pages/servico-cadastro/servico-cadastro.html
+++ b/src/pages/servico-cadastro/servico-cadastro.html
@@ -10,7 +10,7 @@
 
 <ion-content padding>
 
-  <p>PARA FUNCINAR CADASTRE CATEGORIAS E ATRELE OS VALORIAS AO FORMULARIO, NECESSARIO ESTAR LOGADO</p>
+  <p>PARA FUNCINAR CADASTRE CATEGORIAS AO BANCO </p>
   <form (submit)="cadastrar()">
     <ion-list>
 
@@ -37,7 +37,4 @@
 
     </ion-list>
   </form>
- {{servico.categoria.id}}
-
-
 </ion-content>
