--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,8 +9,9 @@
 <ion-content padding>
   The world is your oyster.
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    If you get lost, the
+    <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
   <button ion-button full (click)="goCadastrarServico()">Cadastro de Servico</button>
-  
-  </ion-content>
+
+</ion-content>
