--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,6 +2,7 @@
 
   <div class="main-content">
       <div padding text-center class="container-logo">
+          <img src="assets/imgs/logo.png">
           <p>Aqui entra nossa logo hehe</p>
         </div>
     <div text-center class="socialLogin" padding>
