Adição do menu e formatação data e hora do serviço

--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -1,3 +1,19 @@
+<ion-header>
+    <ion-navbar >
+      <ion-buttons >
+        <button  ion-button icon-only menuToggle>
+          <ion-icon  name="menu"></ion-icon>
+  
+        </button>
+  
+      </ion-buttons>
+      <ion-title>
+        Ionic Blank
+      </ion-title>
+    </ion-navbar>
+  </ion-header>
+
+
 <ion-content class="bg-img">
   <div class="main-content">
     <div padding style="width: 100%;">
