--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,10 +1,17 @@
+
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-navbar >
+    <ion-buttons start>
+      <button ion-button icon-only menuToggle>
+        <ion-icon name="menu"></ion-icon>
+
+      </button>
+
+    </ion-buttons>
+    
   </ion-navbar>
 </ion-header>
+
 
 <ion-content padding>
  
@@ -27,7 +34,7 @@
 
       <ion-row>
           <ion-col>
-            <button ion-button icon-start clear small>
+            <button ion-button icon-start>
               <ion-icon name="thumbs-up"></ion-icon>
               <div>Ver </div>
             </button>
@@ -40,7 +47,7 @@
           </ion-col>
           <ion-col center text-center>
             <ion-note>
-              25/09/2018 11:40h
+             <ion-datetime displayFormat="MMM DD, YYYY HH:mm" [(ngModel)]="anuncio.dataHora" ></ion-datetime>>
             </ion-note>
           </ion-col>
         </ion-row>
