Tratamento erro tela login/cadastro, loader e refresher no homePage

--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -90,7 +90,7 @@
             </ion-item>
           </div>
         </ion-list>
-        <button ion-button full color="dark" [disabled]="!validations_form.valid" (click)="doRegister(regData)">Registra</button>
+        <button ion-button full color="dark" [disabled]="!validations_form.valid">Registra</button>
       </form>
       <div class="sepretor-or" padding-horizontal>
         <p>Or</p>
