--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -3,8 +3,8 @@
 
   <div class="main-content">
       <div padding text-center class="container-logo">
-          <img src="assets/imgs/logo.png">
-          <p>Aqui entra nossa logo hehe</p>
+          
+          <p>SPA</p>
         </div>
     <div text-center class="socialLogin" padding>
       <button ion-button full class="google">
