--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -48,9 +48,9 @@
           </button>
         </ion-col>
         <ion-col>
-          <button ion-button icon-start>
+          <button ion-button icon-start (click)="candidatar(anuncio.id)">
             <ion-icon name="ios-call-outline"></ion-icon>
-            <div>Contato</div>
+            <div>Candidatar-se</div>
           </button>
         </ion-col>
         <ion-col center text-center>
