Implementando Login Automatico

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,7 +30,7 @@
 
     <ion-item>
       <ion-avatar item-start>
-        <img src="assets/imgs/ALISSON.jpg">
+        <img src="assets/icon/icone-do-usuario.jpg">
       </ion-avatar>
       <h2> {{anuncio.anunciante.nome}}</h2>
     </ion-item>
