--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -49,7 +49,7 @@
         </ion-col>
         <ion-col>
           <button ion-button icon-start (click)="candidatar(anuncio.id)">
-            <ion-icon name="ios-call-outline"></ion-icon>
+            <ion-icon name="hand"></ion-icon>
             <div>Candidatar-se</div>
           </button>
         </ion-col>
