--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -4,8 +4,8 @@
         <!--material-design-background-->
         <img class="user-avatar round" style="height:90px;max-width:90px;" [src]="chosenPicture || placeholder" onerror="this.src='assets/icon/icone-do-usuario.jpg'"
         />
-        <p class="name">{{usuarioEmail}}</p>
-        <p class="e-mail">{{usuarioNome}}</p>
+        <p class="name">asdfasdfasdf</p>
+        <p class="e-mail">asdfasdfsadf</p>
       </div>
       <ion-list no-lines>
           <button menuClose="left" ion-item detail-none  (click)="homepage()">
