--- a/src/pages/meus-servicos/meus-servicos.html
+++ b/src/pages/meus-servicos/meus-servicos.html
@@ -6,9 +6,16 @@
 -->
 <ion-header>
 
+
   <ion-navbar>
-    <ion-title>MeusServicos</ion-title>
-  </ion-navbar>
+      <ion-title>MeusServicos</ion-title>
+    
+
+        <button ion-button icon-only menuToggle>
+          <ion-icon name="menu"></ion-icon>
+        </button>
+  
+    </ion-navbar>
 
 </ion-header>
 
