--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,10 +21,8 @@
 </ion-header>
 
 
-<ion-content padding auto-hide>
-  <ion-refresher (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content></ion-refresher-content>
-  </ion-refresher>
+<ion-content padding  auto-hide>
+  
 
   <ion-card *ngFor="let anuncio of lista_anuncios">
     <ion-item>
@@ -67,6 +65,9 @@
   </button>
     
   </ion-fab>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+   <ion-infinite-scroll-content></ion-infinite-scroll-content>
+ </ion-infinite-scroll>
   
 
 </ion-content>
